# dictation-client

./: .gitignore  .gitmodules  CHANGELOG.md  Dockerfile-cpp  Dockerfile-python  README.md
.github/workflows/: ci.yml  publish-images.yml
cpp/: CHANGELOG.md  CMakeLists.txt  Dockerfile  README.md  build_docker_image.sh  make_proto.sh
cpp/cmake/Modules/: FindGrpc.cmake
cpp/dictation-client/: CMakeLists.txt  audio-utils.cpp  audio-utils.h  main.cpp  wave-utils.cpp  wave-utils.h
cpp/docker/: run_dictation_cilent_cpp.sh  run_dictation_client_cpp.sh
cpp/libdictation-client/: CMakeLists.txt  VERSION.h  cloud_speech_extended.grpc.pb.cc  cloud_speech_extended.grpc.pb.h  cloud_speech_extended.pb.cc  cloud_speech_extended.pb.h  dictation_asr.grpc.pb.cc  dictation_asr.grpc.pb.h  dictation_asr.pb.cc  dictation_asr.pb.h  dictation_client.cpp  dictation_client.h  health.grpc.pb.cc  health.grpc.pb.h  health.pb.cc  health.pb.h
cpp/tests/: test_service.sh  test_service_on_docker.sh  test_service_with_script_for_docker_usage.sh  test_service_with_script_for_local_usage.sh
docs/: README.md  gen_proto_doc.sh  index.md  markdownServiceFirst.tmpl
docs/_layouts/: default.html
docs/assets/css/: style.scss
proto/: cloud_speech_extended.proto  dictation_asr.proto  make_proto.sh
python/: CHANGELOG.md  Dockerfile  README.md  VERSION.py  build_docker_image.sh  dictation_client.py  make_proto.sh  requirements.txt  run.sh  setup.sh
python/docker/: run_dictation_cilent_python.sh  run_dictation_client_python.sh
python/service/: dictation_asr_pb2.py  dictation_asr_pb2_grpc.py  dictation_settings.py  streaming_recognizer.py  sync_recognizer.py
python/tests/: test_service.sh  test_service_on_docker.sh  test_service_with_script_for_docker_usage.sh  test_service_with_script_for_local_usage.sh
python/utils/: audio_loader.py  audio_source.py  audio_stream.py  audio_utils.py  mic_source.py  service_utils.py  wave_loader.py
tools/: build_googleapis.sh  install_boost.sh  install_grpc.sh  pulseaudio.docker.conf
